--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-navigation-stack": "~1.10.3",
     "react-navigation-tabs": "~2.6.2",
     "react-redux": "^7.1.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
